# demeanor

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_app.py
templates/: index.html  results.html
