[project]
name = "demeaner"
version = "0.1.0"
description = "Market Index Z-Score Analysis - Inspired by 'The Misbehaviour of Markets' by Benoit Mandelbrot"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kshitij", email = "hi@kxsh.dev"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "yfinance>=0.2.66",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "flask>=3.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "gunicorn>=23.0.0",
]
